back to redesigning this iteration of portfolio

--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ section > h2 {
   pointer-events: none;
   user-select: none;
   color: var(--clr-font-primary);
-  padding-bottom: 5rem;
+  padding-bottom: 2rem;
   font-size: xxx-large;
 }
 
@@ -85,7 +85,7 @@ hr {
 .nav-logo-left {
   display: flex;
   align-items: center;
-  font-size: clamp(3rem, 4vw, 3.5rem);
+  font-size: clamp(2rem, 5vw, 2.5rem);
   margin-right: 1rem;
   a {
     user-select: none;
@@ -97,7 +97,7 @@ hr {
 .nav-items-right {
   display: flex;
   gap: 5rem;
-  font-size: clamp(1.3rem, 1.5vw, 1.5rem);
+  font-size: clamp(1rem, 1.5vw, 1.2rem);
   align-items: center;
   margin-inline: 1rem;
 }
@@ -288,7 +288,6 @@ hr {
 .projects-wrapper {
   display: flex;
   flex-direction: column;
-  padding-block: 5rem;
   max-width: 50rem;
   align-items: center;
   justify-content: center;
@@ -297,15 +296,14 @@ hr {
 
 .projects-list {
   display: grid;
-  gap: 10rem;
 }
 
 .project-card {
   font-size: clamp(1rem, 0.75vw, 1.1rem);
   display: flex;
-  gap: 10rem;
+  gap: 5rem;
   hr {
-    margin-block: 0.5rem;
+    margin-block: 0.25rem;
   }
   img {
     object-fit: cover;
@@ -316,6 +314,7 @@ hr {
 
 .project-img {
   flex: 1;
+  border-radius: 1rem;
 }
 
 .project-text-wrapper {
@@ -325,28 +324,23 @@ hr {
   gap: 0.5rem;
 }
 
-/* .project-text-wrapper {
-  display: flex;
-  flex-direction: column;
-  background: var(--clr-bg-accent);
-  backdrop-filter: blur(15px);
-  padding: 2rem;
-  max-height: 30rem;
-
-  h3 {
-    color: var(--clr-font-accent);
-    font-size: xx-large;
-    font-weight: 700;
-  }
-} */
-/* .project-stack {
-  padding-block: 1rem;
+.project-text-wrapper h3 {
+  color: var(--clr-font-accent);
+  font-size: x-large;
+  font-weight: 700;
 }
+
+.project-stack :not(strong) {
+  padding-block: 1rem;
+  color: var(--clr-font-primary);
+  opacity: 65%;
+}
+
 .project-description {
   display: flex;
   line-height: 1.6rem;
-  height: 10rem;
-} */
+  flex-grow: 1;
+}
 
 .project-link-wrapper {
   display: flex;
@@ -365,11 +359,9 @@ hr {
     border-radius: 0.5rem;
   }
 }
-
 .view-more-projects-button {
   display: flex;
-  width: 25%;
-  font-size: clamp(0.85rem, 2vw, 1rem);
+  font-size: clamp(0.85rem, 5vw, 1rem);
   margin: 0 auto;
   position: relative;
   outline: 1px solid var(--clr-font-accent);
@@ -377,10 +369,9 @@ hr {
   align-items: center;
   justify-content: center;
   font-weight: 550;
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 2.5rem;
   border-radius: 0.5rem;
   text-align: center;
-  min-width: 15rem;
   text-decoration: none;
   color: var(--clr-font-accent);
   border: none;
@@ -395,7 +386,7 @@ hr {
   opacity: 0%;
   height: 28px;
   width: 100%;
-  transition: all 0.5s ease-in-out forwards;
+  transition: all 0.75s ease-in-out forwards;
 }
 
 .view-more-projects-button:hover,
@@ -417,92 +408,147 @@ hr {
 .about-wrapper {
   display: flex;
   flex-direction: column;
-  padding-block: 5rem;
-  max-width: 50rem;
   align-items: center;
-  margin: 0 auto;
+  h3 {
+    flex: 0.5;
+  }
 }
-
 .about-inner-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 5rem;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.img-and-about {
+.about-top {
   display: flex;
   gap: 5rem;
+  /* justify-content: space-between; */
+}
+
+.about-col-top-left {
+  display: flex;
+}
+
+.about-col-top-right {
+  display: grid;
+  gap: 1rem;
 }
 
 .headshot-img {
-  width: 20rem;
+  display: flex;
+  height: 25rem;
+  width: 25rem;
   border-radius: 0.5rem;
+  object-fit: cover;
 }
 
 .about-span {
-  line-height: 1.5rem;
+  line-height: 2rem;
   font-weight: 400;
+  max-width: 35rem;
   min-width: 25rem;
 }
 
 .education-wrapper {
   display: flex;
-  gap: 2rem;
-}
-
-.education-skills {
-  display: flex;
   flex-direction: column;
-  gap: 5rem;
-}
-
-.education-wrapper h3 {
-  font-size: clamp(1.7rem, 5vw, 2rem);
-  color: var(--clr-font-accent);
+  gap: 1rem;
 }
 
 .education {
   display: flex;
-  gap: 5rem;
-  border: 2px solid var(--clr-secondary-bg);
-  padding: 1rem;
-  width: 100%;
-  border-radius: 1rem;
-  background: var(--clr-secondary-bg);
+  gap: 1rem;
+
+  ul {
+    list-style: none;
+    padding: 0.5rem;
+  }
+}
+
+.education-item {
+  flex: 1;
 }
 
 .education-type {
-  font-weight: 800;
+  font-weight: 700;
+}
+
+.education-name {
+  opacity: 55%;
 }
 
 .education-time-frame {
-  opacity: 75%;
+  opacity: 55%;
 }
 
-.skills-wrapper {
+/*----------------------------- STACK----------------------------- */
+.about-bottom {
   display: flex;
+  display: grid;
   gap: 2rem;
   h3 {
-    font-size: clamp(1.7rem, 5vw, 2rem);
-    color: var(--clr-font-accent);
-    flex: 2;
+    flex: 0.25;
   }
 }
 
-.skills-card {
+.stack-wrapper {
   display: flex;
-  border: 2px solid var(--clr-secondary-bg);
-  padding: 1rem;
-  border-radius: 1rem;
-  background: var(--clr-secondary-bg);
+}
 
+.stack-specialty {
+  display: flex;
+  align-items: center;
+  flex: 2;
+  li {
+    font-size: large;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+    gap: 0.5rem;
+    place-content: center;
+    place-items: center;
+    background-color: var(--clr-bg-accent);
+    border-radius: 0.25rem;
+    flex: 1;
+  }
+  ul {
+    flex: 1;
+    display: flex;
+    gap: 1rem;
+  }
+}
+
+.stack-icon {
+  color: var(--clr-font-accent);
+}
+
+.other-skills {
+  display: flex;
+}
+
+.skill {
+  font-size: medium;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  gap: 1rem;
   ul {
     display: flex;
-    list-style: none;
-    flex-wrap: wrap;
-    gap: 0.5rem;
+    flex-direction: column;
+    /* flex: 1; */
+
+    /* justify-content: center; */
   }
+}
+.other-skills-list {
+  display: flex;
+  background-color: var(--clr-bg-accent);
+  border-radius: 0.25rem;
+  list-style: none;
+  gap: 2rem;
 }
 
 /* -----------------CONTACT----------------- */
