--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 /* -----------------ROOT----------------- */
 
 :root {
-  --clr-primary-bg: #0e0e0e;
+  --clr-primary-bg: #131313;
   --clr-secondary-bg: rgba(32, 32, 32, 0.664);
   --clr-bg-accent: hsl(0, 0%, 9%);
   --clr-bg-accent-2: hsla(0, 0%, 18%, 0.363);
@@ -23,20 +23,26 @@
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--clr-font-accent) transparent;
+  scrollbar-color: var(--clr-font-accent) var(--clr-secondary-bg);
 }
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 20px;
+  scrollbar-width: thin;
+  scrollbar-color: var(--clr-font-accent) var(--clr-secondary-bg);
 }
 
 *::-webkit-scrollbar-track {
   background: transparent;
 }
 
-*::-webkit-scrollbar-thumb {
-  border-radius: 1rem;
+html {
+  font-size: 100%;
+  font: inherit;
+  line-height: 1.6;
+  font-family: "Mulish", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 /* -----------------APP----------------- */
@@ -45,28 +51,13 @@
   height: 100svh;
   overflow-y: scroll;
   overflow-x: hidden;
-  scroll-snap-type: y mandatory;
-  background-color: var(--clr-primary-bg);
+  background-color: var(--clr-bg-accent);
   color: var(--clr-font-primary);
-
-  /* -------FONT-------- */
-  font-family: "Mulish", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
 }
 
-section > h2 {
-  font-size: clamp(1rem, 10vw, 2rem);
-  pointer-events: none;
-  user-select: none;
-  color: var(--clr-font-primary);
-  padding-bottom: 2rem;
-  font-size: xxx-large;
-}
-
-hr {
-  opacity: 25%;
-}
+/* hr {
+  opacity: 15%;
+} */
 /* -----------------NAVBAR----------------- */
 
 .navbar {
@@ -79,14 +70,14 @@ hr {
   padding-inline: 1rem;
   align-items: center;
   justify-content: space-between;
-  background-color: var(--clr-primary-bg);
 }
 
 .nav-logo-left {
   display: flex;
   align-items: center;
-  font-size: clamp(2rem, 5vw, 2.5rem);
-  margin-right: 1rem;
+  /* font-size: clamp(2rem, 5vw, 2.5rem); */
+
+  height: inherit;
   a {
     user-select: none;
     text-decoration: none;
@@ -97,9 +88,9 @@ hr {
 .nav-items-right {
   display: flex;
   gap: 5rem;
-  font-size: clamp(1rem, 1.5vw, 1.2rem);
-  align-items: center;
+  align-items: end;
   margin-inline: 1rem;
+  height: inherit;
 }
 
 .nav-items-right a:not(.CV) {
@@ -125,7 +116,6 @@ hr {
   padding: 0.75rem 2rem;
   border-radius: 0.5rem;
   text-align: center;
-  font-size: clamp(0.85rem, 2vw, 1rem);
   position: relative;
   border: none;
 }
@@ -188,38 +178,35 @@ hr {
 
 .home-wrapper {
   display: flex;
-  flex-direction: column;
-  place-content: center;
+  justify-content: center;
   align-items: center;
-  z-index: 100000;
-  height: 100svh;
+  height: 70svh;
   width: 100dvw;
-  position: relative;
+  padding-block: 5rem;
 }
 
-.home-centered-content {
-  padding: 2rem;
-  margin-inline: 2rem;
-}
+/* .home-centered-content {
+} */
 
 .name {
-  display: flex;
-  text-wrap: nowrap;
-  font-size: clamp(2rem, 10vw, 7rem);
+  /* display: flex; */
+  /* text-wrap: nowrap; */
+  /* font-size: clamp(2rem, 5vw, 7rem); */
   color: var(--clr-font-accent);
-  font-weight: 800;
-  width: 100%;
+  /* font-weight: 800; */
+  /* width: 100%; */
+  text-align: center;
 }
 
 .name-titles {
   display: flex;
   justify-items: space-between;
   align-content: center;
-  padding: 0.5rem;
-  font-size: clamp(1.2rem, 2vw, 2rem);
+  /* padding: 0.5rem; */
+  /* font-size: clamp(1.2rem, 2vw, 2rem); */
   font-weight: 600;
   justify-content: center;
-  letter-spacing: 0.5rem;
+  /* letter-spacing: 0.5rem; */
 }
 
 #seperator {
@@ -230,15 +217,16 @@ hr {
   display: flex;
   width: max-content;
   margin: 0 auto;
-  font-weight: 600;
-  padding: 1rem 4rem;
+  font-weight: 400;
+  padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   text-decoration: none;
   text-align: center;
-  font-size: clamp(0.95rem, 2vw, 1.2rem);
-  color: var(--clr-font-accent);
-  background-color: var(--clr-secondary-bg);
-  backdrop-filter: blur(20px);
+  /* font-size: clamp(0.95rem, 2vw, 1.2rem); */
+  color: var(--clr-font-primary);
+  opacity: 55%;
+  /* background-color: var(--clr-secondary-bg);
+  backdrop-filter: blur(20px); */
   align-items: center;
   justify-content: center;
 }
@@ -246,79 +234,49 @@ hr {
 .cta:hover {
   background-color: var(--clr-font-accent);
   color: var(--clr-primary-bg);
+  opacity: 100%;
   transition: all 1s ease-in-out;
-}
-
-.home-wrapper .contact-links-wrapper {
-  display: flex;
-  position: absolute;
-  right: 2rem;
-  bottom: 1rem;
-  gap: 1.3rem;
-  flex: 1;
-  z-index: 100;
-  p {
-    display: none;
-  }
-}
-
-.home-wrapper .contact-links-wrapper button {
-  display: flex;
-  align-items: center;
-  color: var(--clr-font-accent);
-  background-color: transparent;
-  padding: 0.5rem;
-  border-radius: 0.5rem;
-  border: none;
-}
-
-.home-wrapper .contact-links-wrapper button:hover,
-.home-wrapper .contact-links-wrapper button:focus {
-  background-color: var(--clr-font-accent);
-  color: var(--clr-primary-bg);
-}
-
-.home-wrapper .contact-links-wrapper svg {
-  width: 2rem;
-  height: 2rem;
 }
 
 /* -----------------PROJECTS----------------- */
 
 .projects-wrapper {
-  display: flex;
-  flex-direction: column;
-  max-width: 50rem;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
+  display: grid;
+  gap: 3rem;
+  place-items: center;
+  background-color: var(--clr-primary-bg);
+  padding-block: 5rem;
 }
 
 .projects-list {
-  display: grid;
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+  /* flex-basis: 50rem; */
+  justify-content: center;
+  padding-inline: 5rem;
 }
 
 .project-card {
-  font-size: clamp(1rem, 0.75vw, 1.1rem);
   display: flex;
-  gap: 5rem;
-  hr {
-    margin-block: 0.25rem;
-  }
-  img {
-    object-fit: cover;
-    display: flex;
-    height: 30rem;
-  }
+  flex-direction: column;
+  flex: 1;
+  max-width: 50rem;
+  gap: 1rem;
+  flex-basis: 25rem;
 }
 
 .project-img {
-  flex: 1;
-  border-radius: 1rem;
+  display: flex;
+  /* width: clamp(20rem, 100%, 20rem);
+  height: clamp(20rem, 100%, 20rem); */
+  height: 20rem;
+  width: 100%;
+  border-radius: 0.5rem;
+  object-fit: cover;
 }
 
 .project-text-wrapper {
-  flex: 2;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -326,8 +284,14 @@ hr {
 
 .project-text-wrapper h3 {
   color: var(--clr-font-accent);
-  font-size: x-large;
+  /* font-size: x-large; */
   font-weight: 700;
+}
+
+.project-description {
+  display: flex;
+  /* max-width: 35rem; */
+  /* height: 100%; */
 }
 
 .project-stack :not(strong) {
@@ -338,44 +302,44 @@ hr {
 
 .project-description {
   display: flex;
-  line-height: 1.6rem;
-  flex-grow: 1;
+  /* flex: 1; */
 }
 
 .project-link-wrapper {
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
   justify-content: left;
-  font-size: large;
+  /* font-size: large; */
   font-weight: 500;
   padding-block: 1rem;
-
   a {
     text-align: center;
     min-width: max-content;
     color: var(--clr-font-primary);
     background-color: var(--clr-secondary-bg);
-    padding: 0.5rem 1rem;
+    padding: 0.25rem 0.5rem;
     border-radius: 0.5rem;
   }
 }
+
 .view-more-projects-button {
   display: flex;
-  font-size: clamp(0.85rem, 5vw, 1rem);
-  margin: 0 auto;
+  /* font-size: clamp(0.85rem, 5vw, 1rem); */
+  /* margin: 0 auto; */
   position: relative;
   outline: 1px solid var(--clr-font-accent);
   position: relative;
   align-items: center;
   justify-content: center;
   font-weight: 550;
-  padding: 0.75rem 2.5rem;
+  padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   text-align: center;
   text-decoration: none;
   color: var(--clr-font-accent);
   border: none;
   background: transparent;
+  /* margin: 5rem auto; */
 }
 
 #link-to-more-projects-icon {
@@ -409,66 +373,97 @@ hr {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-block: 5rem;
+  gap: 5rem;
   h3 {
+    font-size: 0.85rem;
+    opacity: 55%;
+    font-weight: 400;
     flex: 0.5;
   }
 }
 .about-inner-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  flex-wrap: wrap;
+  gap: 5rem;
   justify-content: center;
 }
 
 .about-top {
   display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: center;
   gap: 5rem;
-  /* justify-content: space-between; */
 }
 
 .about-col-top-left {
-  display: flex;
+  display: grid;
 }
 
 .about-col-top-right {
   display: grid;
-  gap: 1rem;
+  /* object-fit: cover; */
 }
 
 .headshot-img {
   display: flex;
-  height: 25rem;
-  width: 25rem;
+  width: 20rem;
+  height: auto;
+  /* flex: 1; */
   border-radius: 0.5rem;
   object-fit: cover;
 }
 
+.about-resume-cv-wrapper {
+  display: flex;
+  height: 2rem;
+  gap: 2rem;
+  justify-content: left;
+  flex: 1;
+}
+
 .about-span {
   line-height: 2rem;
+  /* flex: 1; */
   font-weight: 400;
   max-width: 35rem;
   min-width: 25rem;
 }
 
+.about-bottom {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 5rem;
+
+  /* gap: 1rem; */
+  /* justify-content: center; */
+}
+
 .education-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 
 .education {
   display: flex;
-  gap: 1rem;
+  /* gap: 0.5rem; */
+  text-align: center;
+  flex-wrap: wrap;
 
   ul {
     list-style: none;
-    padding: 0.5rem;
   }
 }
 
 .education-item {
+  display: flex;
+  flex-direction: column;
   flex: 1;
+  justify-content: space-around;
+  text-align: left;
+  width: 100%;
+  /* background-color: var(--clr-bg-accent-2); */
 }
 
 .education-type {
@@ -479,76 +474,66 @@ hr {
   opacity: 55%;
 }
 
-.education-time-frame {
-  opacity: 55%;
-}
-
 /*----------------------------- STACK----------------------------- */
-.about-bottom {
+
+.stack-specialty ul {
   display: flex;
-  display: grid;
-  gap: 2rem;
-  h3 {
-    flex: 0.25;
-  }
+  /* flex-direction: column; */
+  gap: 1rem;
 }
 
-.stack-wrapper {
+.stack-specialty li {
   display: flex;
-}
-
-.stack-specialty {
-  display: flex;
-  align-items: center;
-  flex: 2;
-  li {
-    font-size: large;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 1rem;
-    gap: 0.5rem;
-    place-content: center;
-    place-items: center;
-    background-color: var(--clr-bg-accent);
-    border-radius: 0.25rem;
-    flex: 1;
-  }
-  ul {
-    flex: 1;
-    display: flex;
-    gap: 1rem;
-  }
+  /* flex-direction: column; */
+  gap: 0.25rem;
+  /* place-content: center; */
+  /* place-items: center; */
+  /* background-color: var(--clr-bg-accent-2); */
+  padding-block: 0.5rem;
+  border-radius: 0.25rem;
+  /* flex: 0.15; */
 }
 
 .stack-icon {
   color: var(--clr-font-accent);
+  height: 2rem;
+  width: 2rem;
 }
 
 .other-skills {
   display: flex;
+  /* justify-content: space-between; */
+  gap: 5rem;
+  h3 {
+    opacity: 55%;
+    font-weight: 400;
+  }
 }
 
 .skill {
-  font-size: medium;
   display: flex;
+  /* flex: 1; */
   flex-direction: column;
-  flex: 1;
-  gap: 1rem;
-  ul {
-    display: flex;
-    flex-direction: column;
-    /* flex: 1; */
-
-    /* justify-content: center; */
+  /* gap: 0.5rem; */
+  h3 {
+    text-wrap: nowrap;
   }
 }
+
+.skill ul {
+  display: flex;
+  flex-direction: column;
+}
+
 .other-skills-list {
   display: flex;
-  background-color: var(--clr-bg-accent);
-  border-radius: 0.25rem;
-  list-style: none;
-  gap: 2rem;
+  flex: auto;
+
+  li {
+    /* list-style: inside circle; */
+    list-style: none;
+    text-align: justify;
+  }
 }
 
 /* -----------------CONTACT----------------- */
@@ -556,30 +541,19 @@ hr {
 .contact-full-wrapper {
   display: flex;
   flex-direction: column;
-  padding-block: 5rem;
-
-  h2 {
-    margin: 0 auto;
-    padding-bottom: 5rem;
-  }
-}
-
-.contact-inner-wrapper {
-  display: flex;
+  align-items: center;
   justify-content: center;
+  height: 20rem;
+  gap: 2rem;
+  background-color: var(--clr-primary-bg);
 }
 
 .contact-full-wrapper .contact-links-wrapper {
   display: flex;
-  align-items: center;
-  align-content: center;
-  gap: 2rem;
-
+  /* width: 100%; */
+  /* max-width: 55rem; */
   p {
     color: var(--clr-font-primary);
-    font-size: large;
-    opacity: 80%;
-    font-weight: 700;
     letter-spacing: 0.15rem;
   }
 }
@@ -588,13 +562,11 @@ hr {
   display: flex;
   text-decoration: none;
   color: var(--clr-font-accent);
-  background-color: var(--clr-secondary-bg);
+  background-color: transparent;
   align-items: center;
   border-radius: 0.25rem;
-  font-size: clamp(2rem, 10vw, 4rem);
   gap: 1rem;
   padding: 1rem;
-  outline: 0;
   border: none;
 }
 
@@ -603,17 +575,15 @@ hr {
 .footer-wrapper {
   height: 10svh;
   display: flex;
+  flex-direction: column;
   width: 100vw;
   align-items: center;
   justify-content: center;
   color: var(--clr-font-primary);
+  background-color: var(--clr-primary-bg);
   text-align: center;
   user-select: none;
   pointer-events: none;
-}
-
-.footer-content {
-  font-size: 0.75rem;
   opacity: 55%;
 }
 
