--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,10 @@ html {
   color: var(--clr-font-primary);
 }
 
+h2 {
+  letter-spacing: 2px;
+  font-size: xxx-large;
+}
 /* hr {
   opacity: 15%;
 } */
@@ -242,7 +246,7 @@ html {
 
 .projects-wrapper {
   display: grid;
-  gap: 3rem;
+  gap: 5rem;
   place-items: center;
   background-color: var(--clr-primary-bg);
   padding-block: 5rem;
@@ -379,74 +383,69 @@ html {
     font-size: 0.85rem;
     opacity: 55%;
     font-weight: 400;
-    flex: 0.5;
   }
 }
 .about-inner-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 5rem;
   justify-content: center;
 }
 
 .about-top {
   display: flex;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 5rem;
 }
 
 .about-col-top-left {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
 
 .about-col-top-right {
-  display: grid;
-  /* object-fit: cover; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .headshot-img {
   display: flex;
-  width: 20rem;
+  width: 25rem;
   height: auto;
-  /* flex: 1; */
   border-radius: 0.5rem;
   object-fit: cover;
 }
 
 .about-resume-cv-wrapper {
   display: flex;
-  height: 2rem;
+  height: 3rem;
   gap: 2rem;
-  justify-content: left;
-  flex: 1;
+  /* justify-content: space-evenly; */
+  /* flex: 1; */
+  button {
+    flex: 0.5;
+  }
 }
 
 .about-span {
+  flex: 1;
   line-height: 2rem;
-  /* flex: 1; */
   font-weight: 400;
   max-width: 35rem;
   min-width: 25rem;
 }
 
-.about-bottom {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: 5rem;
-
-  /* gap: 1rem; */
-  /* justify-content: center; */
-}
-
 .education-wrapper {
   display: flex;
   flex-direction: column;
+  /* gap: 1rem; */
 }
 
 .education {
   display: flex;
+  flex-direction: column;
   /* gap: 0.5rem; */
   text-align: center;
   flex-wrap: wrap;
@@ -459,10 +458,10 @@ html {
 .education-item {
   display: flex;
   flex-direction: column;
-  flex: 1;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   text-align: left;
-  width: 100%;
+  /* width: 100%; */
+  flex: 1;
   /* background-color: var(--clr-bg-accent-2); */
 }
 
@@ -476,22 +475,35 @@ html {
 
 /*----------------------------- STACK----------------------------- */
 
+.about-bottom {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 3rem;
+}
+
+.stack-specialty {
+  display: flex;
+  /* gap: 0.5rem; */
+  flex-direction: column;
+}
+
 .stack-specialty ul {
   display: flex;
-  /* flex-direction: column; */
   gap: 1rem;
+  /* flex-direction: column; */
 }
 
 .stack-specialty li {
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   gap: 0.25rem;
   /* place-content: center; */
-  /* place-items: center; */
-  /* background-color: var(--clr-bg-accent-2); */
-  padding-block: 0.5rem;
+  place-items: center;
+  background-color: var(--clr-bg-accent-2);
+  padding: 0.4rem 2rem;
   border-radius: 0.25rem;
-  /* flex: 0.15; */
+  flex: 1;
 }
 
 .stack-icon {
@@ -502,22 +514,16 @@ html {
 
 .other-skills {
   display: flex;
+  /* flex-direction: column; */
   /* justify-content: space-between; */
-  gap: 5rem;
-  h3 {
-    opacity: 55%;
-    font-weight: 400;
-  }
+  /* gap: 10rem; */
+  gap: 7rem;
+  /* justify-content: space-between; */
 }
 
 .skill {
   display: flex;
-  /* flex: 1; */
   flex-direction: column;
-  /* gap: 0.5rem; */
-  h3 {
-    text-wrap: nowrap;
-  }
 }
 
 .skill ul {
@@ -527,12 +533,10 @@ html {
 
 .other-skills-list {
   display: flex;
-  flex: auto;
 
   li {
     /* list-style: inside circle; */
     list-style: none;
-    text-align: justify;
   }
 }
 
@@ -544,7 +548,7 @@ html {
   align-items: center;
   justify-content: center;
   height: 20rem;
-  gap: 2rem;
+  gap: 5rem;
   background-color: var(--clr-primary-bg);
 }
 
@@ -552,22 +556,28 @@ html {
   display: flex;
   /* width: 100%; */
   /* max-width: 55rem; */
+  scale: 2;
   p {
     color: var(--clr-font-primary);
-    letter-spacing: 0.15rem;
+    letter-spacing: 2px;
+    font-weight: 300;
   }
 }
 
 .contact-full-wrapper .contact-links-wrapper button {
   display: flex;
+  flex-direction: column;
   text-decoration: none;
   color: var(--clr-font-accent);
   background-color: transparent;
   align-items: center;
   border-radius: 0.25rem;
-  gap: 1rem;
+  gap: 0.5rem;
   padding: 1rem;
   border: none;
+  text-align: center;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 /* -----------------FOOTER----------------- */
