--- a/src/App.css
+++ b/src/App.css
@@ -230,49 +230,60 @@ h2 {
 
 .projects-wrapper {
   display: grid;
-  gap: 5rem;
+  gap: 2rem;
   place-items: center;
-  padding-block: 5rem;
+  padding-block: 3rem;
   h2 {
     text-align: center;
+  }
+  hr {
+    opacity: 25%;
   }
 }
 
 .projects-list {
-  display: flex;
-  gap: 7rem;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding-inline: 5rem;
+  display: grid;
+  place-items: center;
+  gap: 2rem;
 }
 
 .project-card {
   display: flex;
   flex-direction: column;
-  flex: 1;
-  max-width: 50rem;
-  gap: 1rem;
-  flex-basis: 25rem;
+  gap: 0.25rem;
+  /* max-width: 100%; */
+  height: min-content;
+  width: 40rem;
+  /* border: 1px solid var(--clr-bg-accent-2); */
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+  background-color: var(--clr-bg-accent-2);
 }
 
-.project-img {
+.project-img-wrapper {
   display: flex;
-  height: 30rem;
-  width: 100%;
-  border-radius: 0.5rem;
-  object-fit: cover;
+  /* flex: 1; */
+  img {
+    max-width: 100%;
+    border-radius: 0.25rem;
+    object-fit: cover;
+  }
 }
 
 .project-text-wrapper {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  flex: 1;
+  flex: 0.5;
+  background-color: var(--clr-bg-accent);
+  padding: 1rem;
+  border-radius: 0.25rem;
 }
 
 .project-text-wrapper h3 {
   color: var(--clr-font-accent);
   font-weight: 700;
+  font-size: xx-large;
 }
 
 .project-description {
@@ -297,7 +308,7 @@ h2 {
   font-weight: 500;
   padding-block: 1rem;
   a {
-    flex: 1;
+    flex: 0.25;
     text-align: center;
     min-width: max-content;
     color: var(--clr-font-primary);
@@ -377,8 +388,8 @@ h2 {
     }
   }
 }
-#CTA_Banner:focus em,
-#CTA_Banner:hover em {
+#CTA_Banner:focus,
+#CTA_Banner:hover {
   text-decoration: none;
   background-color: var(--clr-primary-bg);
   color: var(--clr-font-primary);
@@ -386,16 +397,18 @@ h2 {
   text-decoration: underline;
   /* align-content: center; */
 }
-/* -----------------ABOUT----------------- */
+
+/* ------------------------------------------------ABOUT----------------------------------------- */
+
 .about-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-block: 5rem;
-  gap: 5rem;
+  padding-block: 3rem;
+  gap: 3rem;
 
   h4 {
-    font-size: 0.85rem;
+    /* font-size: 0.85rem; */
     opacity: 55%;
     font-weight: 400;
   }
@@ -408,11 +421,11 @@ h2 {
 
 .about-top {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   flex: 1;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: start;
-  gap: 2rem 5rem;
+  gap: 3rem;
 }
 
 .about-col-top-left {
@@ -505,13 +518,19 @@ h2 {
   display: flex;
   align-content: center;
   padding-top: 0.5rem;
+  /* flex-wrap: wrap; */
+  place-items: start;
+  gap: 1rem;
+  /* justify-content: space-evenly; */
 }
 
 .stack-specialty li {
-  display: grid;
+  display: flex;
   gap: 0.5rem;
-  place-items: center;
-  flex: 0.5;
+  place-items: start;
+  /* flex: 0.25; */
+  width: 100%;
+  align-items: center;
   p {
     opacity: 95%;
   }
@@ -534,7 +553,7 @@ h2 {
 .other-skills {
   display: flex;
   align-items: start;
-  gap: 5rem;
+  gap: 3rem;
   ul {
     display: flex;
     flex-direction: column;
@@ -553,7 +572,7 @@ h2 {
   align-items: center;
   justify-content: center;
   gap: 3rem;
-  padding-block: 5rem;
+  padding-block: 3rem;
   background-color: var(--clr-primary-bg);
 }
 
@@ -616,6 +635,9 @@ h2 {
 /* -----------------TABLET-------------------------------------------------------------- */
 
 @media (max-width: 1263px) {
+  h2 {
+    font-size: xx-large;
+  }
   /* ----------------- NAV---------- */
   .navbar {
     padding: 0;
@@ -680,30 +702,98 @@ h2 {
     width: 55%;
   }
   /* ----------------- PROJECTS---------- */
-
+  .projects-list {
+    padding-inline: 2rem;
+  }
+  /* .project-card {
+  } */
+  /* .project-img-wrapper {
+  } */
   /* ----------------- ABOUT---------- */
-}
-
-/* -----------------MOBILE-------------------------------------------------------------- */
-
-@media (max-width: 768px) {
   #about {
     img {
-      height: 25rem;
-      width: 80svw;
       object-fit: cover;
+      padding-inline: 5rem;
+      /* width: 15rem; */
     }
     .about-col-top-left {
       max-width: 80dvw;
 
       span {
         min-width: unset;
+        width: 100%;
+        text-align: justify;
       }
     }
-    .stack-specialty ul,
+
     .education,
     .other-skills {
       flex-wrap: wrap;
+    }
+    .education {
+      display: grid;
+    }
+  }
+  .headshot-cta {
+    justify-content: center;
+    place-items: center;
+  }
+  .about-top {
+    justify-content: center;
+    min-width: 100%;
+    padding-inline: 4rem;
+  }
+  .about-inner-wrapper {
+    display: grid;
+    max-width: 100%;
+    /* margin: 0 auto; */
+    place-items: center;
+  }
+
+  .about-top {
+    flex-wrap: wrap;
+    place-content: center;
+  }
+
+  .other-skills {
+    gap: 2rem;
+  }
+}
+
+/* -----------------MOBILE-------------------------------------------------------------- */
+
+@media (max-width: 859px) {
+  h2 {
+    font-size: xx-large;
+  }
+
+  .stack-specialty ul {
+    flex-wrap: wrap;
+  }
+  .projects-list {
+    place-items: center;
+    /* padding: 0 !; */
+    padding-inline: 0.25rem;
+    h3 {
+      font-size: larger;
+    }
+  }
+  .project-card {
+    /* max-width: 100%; */
+    width: 90%;
+    padding: 0.25rem;
+    gap: 0.25rem;
+  }
+
+  .contact-full-wrapper .contact-links-wrapper {
+    flex-wrap: wrap;
+    a {
+      display: flex;
+      flex: 1;
+      justify-content: center;
+
+      align-items: center;
+      gap: 1rem;
     }
   }
 }
