--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 400;
+  --clr-bg-accent-2: hsla(0, 0%, 18%, 0.363);
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--clr-bg-accent-2);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -12,7 +13,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -23,4 +24,4 @@
   button {
     background-color: #f9f9f9;
   }
-}
+} */
