--- a/src/App.css
+++ b/src/App.css
@@ -408,7 +408,7 @@ section {
     align-items: center;
     color: var(--clr-font-primary);
     text-decoration: none;
-    font-weight: 700;
+    font-weight: 600;
     em {
       display: flex;
       align-items: center;
@@ -450,9 +450,7 @@ section {
 
 .about-top {
   display: flex;
-  /* flex-wrap: wrap; */
   flex: 1;
-  /* justify-content: center; */
   align-items: start;
   gap: 3rem;
 }
@@ -469,13 +467,16 @@ section {
   height: 100%;
   border-radius: 0.5rem;
   object-fit: cover;
-  filter: grayscale(1);
+  max-width: 100%;
 }
 
 .headshot-cta {
   display: grid;
   gap: 2rem;
+  justify-content: center;
+  place-items: center;
 }
+
 .education-and-stack {
   display: flex;
   flex-direction: column;
@@ -497,13 +498,10 @@ section {
   line-height: 1.8;
   font-weight: 400;
   max-width: 35rem;
-  min-width: 25rem;
   .blockQuote {
     display: flex;
     text-align: justify;
-    /* width: 15rem; */
-    padding-inline: 5rem;
-    /* text-justify: distribute; */
+    padding-inline: 2rem;
   }
   a {
     color: var(--clr-font-accent);
@@ -559,8 +557,8 @@ section {
   align-content: center;
   padding-top: 0.5rem;
   place-items: start;
-  gap: 1rem;
-  justify-content: space-between;
+  gap: 3rem;
+  /* justify-content: space-between; */
 }
 
 .stack-specialty li {
@@ -592,8 +590,8 @@ section {
 .other-skills {
   display: flex;
   align-items: start;
-  justify-content: space-between;
-  /* gap: 3rem; */
+  /* justify-content: space-between; */
+  gap: 3rem;
   ul {
     display: flex;
     flex-direction: column;
@@ -618,7 +616,7 @@ section {
 
 .contact-full-wrapper .contact-links-wrapper {
   display: flex;
-  gap: 3rem;
+  gap: 2rem;
   text-align: center;
   font-size: 1.2rem;
   a {
@@ -635,6 +633,7 @@ section {
     height: 3.5rem;
     width: 3.5rem;
     color: var(--clr-font-accent);
+    flex: 1;
   }
 }
 
@@ -718,8 +717,7 @@ section {
     align-items: center;
     backdrop-filter: blur(2px);
     z-index: 1000;
-    font-size: calc(1.5vw + 1.5vh);
-    /* border: 2px solid var(--clr-font-accent); */
+    font-size: 1.4rem;
     background-color: var(--clr-primary-bg);
     user-select: none;
     text-align: center;
@@ -754,16 +752,15 @@ section {
   #about {
     img {
       object-fit: cover;
-      padding-inline: 5rem;
       /* width: 15rem; */
     }
     .about-col-top-left {
-      max-width: 80dvw;
+      /* max-width: 80dvw; */
 
       span {
         min-width: unset;
         width: 100%;
-        text-align: justify;
+        /* text-align: justify; */
       }
     }
 
@@ -782,18 +779,16 @@ section {
   .about-top {
     justify-content: center;
     min-width: 100%;
-    padding-inline: 4rem;
+    padding-inline: 1rem;
+    flex-wrap: wrap;
+    place-content: center;
+    gap: 2rem;
   }
   .about-inner-wrapper {
     display: grid;
     max-width: 100%;
     /* margin: 0 auto; */
     place-items: center;
-  }
-
-  .about-top {
-    flex-wrap: wrap;
-    place-content: center;
   }
 
   .other-skills {
@@ -821,20 +816,29 @@ section {
   }
   .project-card {
     /* max-width: 100%; */
-    width: 90%;
+    width: 95%;
     padding: 0.25rem;
     gap: 0.25rem;
   }
 
   .contact-full-wrapper .contact-links-wrapper {
     display: grid;
+    place-items: start;
     a {
       display: flex;
       flex: 1;
-      justify-content: center;
-
       align-items: center;
       gap: 1rem;
+    }
+  }
+
+  #CTA_Banner {
+    strong {
+      font-weight: 200;
+      color: var(--clr-font-accent);
+    }
+    svg {
+      display: none;
     }
   }
 }
